--- a/artifact/72_micro_benckmarks/Figure7.ipynb
+++ b/artifact/72_micro_benckmarks/Figure7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,18 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Morphling chooses the execution plan: (PP=2,TP=4,DP=4), when the GPU placements are: 8888, and the CPU threads are: 2. The corresponding performance is: 1.165.\n",
-      "Morphling chooses the execution plan: (PP=4,TP=4,DP=1), when the GPU placements are: 4444, and the CPU threads are: 2. The corresponding performance is: 1.803.\n",
-      "Morphling chooses the execution plan: (PP=2,TP=2,DP=1), when the GPU placements are: 4, and the CPU threads are: 2. The corresponding performance is: 5.107.\n",
-      "Morphling chooses the execution plan: zero-offload+gc, when the GPU placements are: 1, and the CPU threads are: 2. The corresponding performance is: 66.0.\n",
-      "Morphling chooses the execution plan: zero-offload+gc, when the GPU placements are: 1, and the CPU threads are: 4. The corresponding performance is: 46.0.\n"
+      "Morphling chooses the execution plan: (PP=2,TP=4,DP=4), when the GPU placements are: 8888, and the CPU threads are: 2. The training performance is: 1.165.\n",
+      "Morphling chooses the execution plan: (PP=4,TP=4,DP=1), when the GPU placements are: 4444, and the CPU threads are: 2. The training performance is: 1.803.\n",
+      "Morphling chooses the execution plan: (PP=2,TP=2,DP=1), when the GPU placements are: 4, and the CPU threads are: 2. The training performance is: 5.107.\n",
+      "Morphling chooses the execution plan: zero-offload+gc, when the GPU placements are: 1, and the CPU threads are: 2. The training performance is: 66.0.\n",
+      "Morphling chooses the execution plan: zero-offload+gc, when the GPU placements are: 1, and the CPU threads are: 4. The training performance is: 46.0.\n"
      ]
     }
    ],
@@ -138,11 +138,11 @@
     "    else:\n",
     "        exec_plan = transform_exec_plan(perf_model.res_matrix[num_gpus][dafault_cpu_threads][0][1])\n",
     "        res_perf.append(perf_data[exec_plan][placement][dafault_cpu_threads])\n",
-    "    print(f'Morphling chooses the execution plan: {exec_plan}, when the GPU placements are: {placement}, and the CPU threads are: {dafault_cpu_threads}. The corresponding performance is: {res_perf[-1]}.')\n",
+    "    print(f'Morphling chooses the execution plan: {exec_plan}, when the GPU placements are: {placement}, and the CPU threads are: {dafault_cpu_threads}. The training performance is: {res_perf[-1]}.')\n",
     "        \n",
     "# 2x more cpus\n",
     "res_perf.append(perf_data[exec_plan][placement][dafault_cpu_threads*2])\n",
-    "print(f'Morphling chooses the execution plan: {exec_plan}, when the GPU placements are: {placement}, and the CPU threads are: {dafault_cpu_threads*2}. The corresponding performance is: {res_perf[-1]}.')\n",
+    "print(f'Morphling chooses the execution plan: {exec_plan}, when the GPU placements are: {placement}, and the CPU threads are: {dafault_cpu_threads*2}. The training performance is: {res_perf[-1]}.')\n",
     "exec_res_perf[execution_plan]=res_perf"
    ]
   },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        " 'ZeRO-Offload+GC': [0.0, 15.0, 30.0, 66.0, 46.0]}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
